--- a/Cordova/package.json
+++ b/Cordova/package.json
@@ -11,14 +11,18 @@
     "license": "Apache-2.0",
     "dependencies": {
         "cordova-android": "^7.1.4",
-        "cordova-plugin-whitelist": "^1.3.3"
+        "cordova-browser": "^5.0.4",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "cz.blocshop.socketsforcordova": "^1.1.0"
     },
     "cordova": {
         "plugins": {
-            "cordova-plugin-whitelist": {}
+            "cordova-plugin-whitelist": {},
+            "cz.blocshop.socketsforcordova": {}
         },
         "platforms": [
-            "android"
+            "android",
+            "browser"
         ]
     }
 }
