--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'org.jetbrains.anko:anko-common:0.9'
+    implementation 'com.github.Ennova-IT:ZeRXconf:1.0.3'
 }
